# server/src/modules/members/member.schema.ts
@@ -12,6 +12,5 @@ export const createMemberSchema = z.object({
 export const updateMemberSchema = createMemberSchema.pick({ endedAt: true });
 
 export const renewMembershipSchema = z.object({
-    renewalPeriodMonths: z.coerce.number().int().positive("Renewal period must be a positive number"),
-    amountPaid: z.coerce.number().positive("Amount paid must be a positive number"),
+    membershipPlanId: z.coerce.number().int().positive("Membership Plan ID must be a positive number"),
 });
